@@ -3,7 +3,6 @@ package org.knowm.xchange.coinbase.v3.dto.futures;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import java.util.Collections;
 import java.util.List;
 import lombok.Getter;
 
@@ -19,10 +18,10 @@ public class CoinbaseFuturesPositionsResponse {
   private final List<CoinbaseFuturesPosition> positions;
 
   @JsonCreator
-  public CoinbaseFuturesPositionsResponse(@JsonProperty("positions") List<CoinbaseFuturesPosition> positions) {
-    this.positions = positions == null ? Collections.emptyList() : Collections.unmodifiableList(positions);
+  public CoinbaseFuturesPositionsResponse(
+      @JsonProperty("positions") List<CoinbaseFuturesPosition> positions) {
+    this.positions = positions == null ? null : List.copyOf(positions);
   }
-
   @Override
   public String toString() {
     return "CoinbaseFuturesPositionsResponse [positions count=" + (positions == null ? 0 : positions.size()) + "]";
